<resources>
    <string name="app_name">IMA</string>
    <string name="settings">réglages</string>
    <string name="app_info">à propos de l\' app</string>
    <string name="account_help">aide</string>
    <string name="active">Actif</string>
    <string name="pending">Suspendu</string>
    <string name="offer">Offrir</string>
    <string name="confirm">Confirmer</string>
    <string name="from">venant du</string>
    <string name="today_conversion">Calculateur de conversion valable au</string>
    <string name="update_data_title">Mettre à jour vos données (le stock actif actuel et si nécessaire les Clés secrètes)</string>
    <string name="update_data">Mettre à jour maintenant</string>
    <string name="verify_title">Les SMS peuvent être vérifiés à l\'arrivée, sinon</string>
    <string name="verify">Vérifier manuellement</string>
    <string name="calc_ima_empty">Combien d\'IMA ?</string>
    <string name="calc_ari_empty">Combien d\'Ariary ?</string>
    <string name="limit_date_hint">JJ/MM/AAAA</string>
    <string name="phone_hint">Téléphone</string>
    <string name="pswd_hint">Mot de passe</string>
    <string name="login">Se connecter</string>
    <string name="offline_title">Accédez à votre compte sans internet</string>
    <string name="signup">S\'inscrire</string>
    <string name="new_account">Nouveau compte</string>
    <string name="account_created">Félicitation ! Vous avez créé votre compte avec succès. Continuez avec votre propre appareil.</string>
    <string name="forgot">Mot de passe oublié ?</string>
    <string name="adv">La plateforme IMA pourrait conduire à la dépendance. Si vous êtes parmi les bénéficiaires prospéré(e)s, pensez à votre progrès et aux autres.</string>
    <string name="connecting">Téléchargement du contenu chiffré sur</string>
    <string name="updatingData">Mise à jour des données</string>
    <string name="creating_account">Création du compte en cours</string>
    <string name="noInternet">Pas de connexion Internet</string>
    <string name="activate">Activer</string>
    <string name="activateDataFailed">Erreur d\'activer les données mobiles</string>
    <string name="lastname_title">Nom</string>
    <string name="firstname_title">Prénoms</string>
    <string name="male">Homme</string>
    <string name="female">Femme</string>
    <string name="dateOfbirth_title">Date de naissance</string>
    <string name="phone_title">Numéro du mobile</string>
    <string name="phone_input_error">Numéro du mobile non pris en charge</string>
    <string name="mail_title">Adresse e-mail</string>
    <string name="mail_hint">E-mail</string>
    <string name="cin_title">Numéro de la CIN</string>
    <string name="city_region_title">Ville/Région</string>
    <string name="city_region_hint">Antsirabe/Vakinankaratra</string>
    <string name="country_title">Pays</string>
    <string name="sim_error">Vérifiez la carte SIM !</string>
    <string name="pswd_title">Nouveau mot de passe</string>
    <string name="wrong_pswd">Mot de passe incorrect !</string>
    <string name="pswd_title2">Confirmer le mot de passe</string>
    <string name="pswd_count">6 à 12 caractères</string>
    <string name="pswd_input_error">Corrigez les mots de passe !</string>
    <string name="empty_field">Tous les champs sont obligatoires !</string>
    <string name="accepting_signup">Je confirme que ces informations sont véritables et j\'accepte les termes et les conditions d\'utilisation des services affiliés à la plateforme IMA.</string>
    <string name="know_more">En savoir plus</string>
    <string name="day">Jour</string>
    <string name="month">Mois</string>
    <string name="year">Année</string>
    <string name="submit">Soumettre</string>
    <string name="ok">D\'accord</string>
    <string name="yes">Oui</string>
    <string name="receiver_title">Destinataire</string>
    <string name="receiver_part">Prénom(s) ou le morceau</string>
    <string name="value_toSend_hint">IMA à transférer</string>
    <string name="scan_title">Demander lui à scanner ce Code QR en utilisant la caméra via son application IMA. Ou</string>
    <string name="send_image">Envoyer comme Aztec</string>
    <string name="transfer">Transférer</string>
    <string name="send_as_text">Envoyer comme texte</string>
    <string name="create_qr_button">Créer un Code QR</string>
    <string name="send">Envoyer</string>
    <string-array name="months">
        <item>Janvier</item>
        <item>Février</item>
        <item>Mars</item>
        <item>Avril</item>
        <item>Mai</item>
        <item>Juin</item>
        <item>Juillet</item>
        <item>Août</item>
        <item>Septembre</item>
        <item>Octobre</item>
        <item>Novembre</item>
        <item>Décembre</item>
    </string-array>
    <string name="notext">Texte est vide</string>
    <string name="image">Image</string>
    <string name="scan">Scan</string>
    <string name="blt_connected">Connecté</string>
    <string name="title_connecting">Connexion …</string>
    <string name="title_not_connected">Non connecté</string>
    <string name="scanning">Recherche …</string>
    <string name="select">Envoyer via</string>
    <string name="none_found">Aucun appareil trouvé</string>
    <string name="title_paired_devices">Appairés</string>
    <string name="title_other_devices">Autres appareils</string>
    <string name="button_scan">Rechercher</string>
    <string name="none">Aucun apparié</string>
    <string name="cannot_connect">Connexion impossible</string>
    <string name="lost_connection">Connexion perdue</string>
    <string name="blt_unsupported">Bluetooth non supporté</string>
    <string name="enable_blt">Activer Bluetooth</string>
    <string name="discoverable">Découvrable</string>
    <string name="continue_">Continuer</string>
    <string name="restart">Erreur, Quitter et Recommencer !</string>
    <string name="sending">Envoi …</string>
    <string name="sms_ok">Envoyé</string>
    <string name="sms_deliv">Délivré</string>
    <string name="msg_not_sent">Non envoyé</string>
    <string name="no_service">Pas de service</string>
    <string name="radio_off">Pas de réseau</string>
    <string name="confirm_title">Entrer le mot de passe pour votre sécurité</string>
    <string name="paste_hint">Poser le vrai texte ici</string>
    <string name="in_gallery">Image enregistrée</string>
    <string name="error_fields">Vérifier les champs !</string>
    <string name="error_insert">La Clé existe déjà !</string>
    <string name="total_created">IMA transférés : </string>
    <string name="insufficent_ima">Stock insuffisant</string>
    <string name="noKey">Plus de Clé !</string>
    <string name="stop">Annuler</string>
    <string name="key_precious">Votre Clé secrète est précieuse</string>
    <string name="understood">J\'ai compris</string>
    <string name="if_transfer_error">Afin d\'éviter une éventuelle perte, en cas de problème vis-à-vis de l\'expéditeur ou du destinataire, le barcode et le SMS sont enregistrés pour être réutilisés.</string>
    <string name="mod_pswd">Changer mon mot de passe</string>
    <string name="mod_mail">Changer mon e-mail</string>
    <string name="leave_device">Abandonner cet appareil</string>
    <string name="dlt_account">Supprimer mon compte</string>
    <string name="current_pswd">Mot de passe actuel</string>
    <string name="mod_pswd_title">Choisir un mot de passe fortement indévinable aux autres n\'est pas impossible pour protéger le compte.</string>
    <string name="new_mail">Nouvelle adresse e-mail</string>
    <string name="mod_mail_title">Une adresse e-mail liée à un compte IMA nous aide à le protéger et à le faire récupérable en cas d\'oubli de mot de passe. Merci d\'entrer une adresse e-mail active.</string>
    <string name="alert_dltAccount">Votre compte sera désactivé à une durée de 30 jours avant la suppression définitive. Au-delà de cette limite, La suppression sera irreversible et le compte ne sera plus récupérable. Pour éviter une éventuelle perte, assurez-vous que votre stock d\'IMA soit vide et que vous n\'ayez pas d\'activités entrantes ou sortantes en attente de confirmation.</string>
    <string name="deactivating">Désactivation</string>
    <string name="help_title">Du problème ou des questions concernant le service IMA? Écrivez-nous sans hésiter (internet requis). Nous vous répondrons à votre adresse e-mail. Ou appelez :</string>
    <string name="your_msg">Votre message</string>
    <string name="too_short">Message trop court !</string>
    <string name="install_isd_title">Installer IMAScan</string>
    <string name="install_isd">Installer maintenant</string>
    <string name="rec_pswd">Recevoir mon mot de passe</string>
    <string name="restore_title">Votre mot de passe sera envoyé à votre adresse e-mail correspondant à votre numéro du téléphone. Ou rendez-vous à notre Centre Clientèle près de chez vous.</string>
    <string name="pswd_sent">Votre mot de passe a bien été envoyé</string>
    <string name="wait">Patience …</string>
    <string name="or">ou</string>
    <string name="app_version">Version 1.0 ---- ©2023</string>
    <string name="gender">Genre</string>
    <string name="email">E-mail</string>
    <string name="cancel">Annuler</string>
    <string name="logout">Déconnexion</string>
    <string name="about">A propos</string>
</resources>
