<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200">

    <ImageView
        android:id="@+id/ic_logo"
        android:layout_width="190dp"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:padding="0dp"
        android:src="@drawable/ic_launcher_ima"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/ic_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/title_login"
        android:layout_marginTop="15dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_phone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/phone_hint"
            android:layout_marginBottom="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="10dp"
                android:singleLine="true"
                android:inputType="phone"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:paddingLeft="12dp"
                android:fontFamily="sans-serif-light"
                android:textSize="14sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/pswd_hint"
            android:layout_marginBottom="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="10dp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:paddingLeft="12dp"
                android:fontFamily="sans-serif-light"
                android:textSize="14sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_gravity="end"
            android:textSize="11dp"
            android:textColor="@color/grey_400"
            android:text="@string/forgot"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"
            android:background="@drawable/back_btn_primary"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="23dp"
            android:background="@color/grey_400"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/grey_200"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-12dp"
            android:text="@string/or"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="10dp"
            android:text="@string/signup"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"
            android:drawableTint="@color/white"
            style="@style/ButtonSuccess"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Copyright 2023"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>