<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/auth_header" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/grey_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/forgot"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="12dp"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_mail_outline"
                    android:inputType="textEmailAddress"
                    style="@style/MaterialEditText"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:text="@string/cancel"
                    android:layout_marginTop="0dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="5dp"
                    style="@style/ButtonPrimarySoft"/>

                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="wrap_content"
                    android:text="@string/send"
                    android:layout_marginTop="0dp"
                    android:layout_gravity="end"
                    style="@style/ButtonPrimary" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <include layout="@layout/app_info"/>

</androidx.constraintlayout.widget.ConstraintLayout>